fixed img clipping problem and expanded bio

--- a/index.css
+++ b/index.css
@@ -17,12 +17,7 @@ nav {
     background-color: white;
 }
 
-#img {
-    margin: auto;
-    width: auto;
-    height: auto;
 
-}
 .para{
     margin: 10px;
 }
